test/langtools/tools/javac/specialConstantFolding/IndyNegativeTest01.out
IndyNegativeTest01.java:31:48: compiler.err.intrinsics.indy.must.have.constant.arg
1 error
